--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install Dependencies
         run: gem install yard
       - name: Generate Documentation
-        run: yardoc --private --exclude "unit_groups/*"
+        run: yardoc
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3.9.3
         with:
